force-app/main/default/objects/Program__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>