force-app/main/default/objects/Program__c/fields/Instrument_Image__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Image__c</fullName>
    <formula>CASE(Instrument__c , 
&apos;Piano&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003IRu&amp;oid=00D0k000000Dsbn&amp;lastMod=1545291800000&quot;,&quot;Piano&quot;,20,30), 
&apos;Guitar&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003IRz&amp;oid=00D0k000000Dsbn&amp;lastMod=1545291824000&quot;,&quot;Guitar&quot;,20,30), 
&apos;Violin&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003IU0&amp;oid=00D0k000000Dsbn&amp;lastMod=1545292420000&quot;,&quot;Violin&quot;,20,30),
&apos;Vocal&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k000000UsnA&amp;oid=00D0k000000Dsbn&amp;lastMod=1545619088000&quot;,&quot;Vocal&quot;,20,30),
&apos;Guitar&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003ISs&amp;oid=00D0k000000Dsbn&amp;lastMod=1545292079000&quot;,&quot;Guitar&quot;,20,30),
&apos;Cello&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003IQI&amp;oid=00D0k000000Dsbn&amp;lastMod=1545291291000&quot;,&quot;Cello&quot;,20,30),
&apos;Drum&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003IQr&amp;oid=00D0k000000Dsbn&amp;lastMod=1545291511000&quot;,&quot;Drum&quot;,20,30),
&apos;Brass&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k000000Us7E&amp;oid=00D0k000000Dsbn&amp;lastMod=1545359161000&quot;,&quot;Brass&quot;,20,30),
&apos;Music Exploration&apos;,IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k000000Us7d&amp;oid=00D0k000000Dsbn&amp;lastMod=1545359786000&quot;,&quot;Music Exploration&quot;,20,30),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0150k0000003ISs&amp;oid=00D0k000000Dsbn&amp;lastMod=1545292079000&quot;,&quot;Music Note&quot;,20,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instrument</label>
    <type>Text</type>
</CustomField>