force-app/main/default/objects/Program__c/fields/Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Scheduling__c</fullName>
    <label>Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
                <isActive>false</isActive>
                <label>Bi-Weekly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>