force-app/main/default/objects/Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Following program type may not be used
1. Trial
2. Makeup
3. Adhoc</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Type</valueSetName>
    </valueSet>
</CustomField>