force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instrument__c</columns>
    <columns>Scheduling__c</columns>
    <columns>Billing__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>